remove fridge from default loads

--- a/index.html
+++ b/index.html
@@ -677,7 +677,15 @@
 
     // Idempotent default loads
     function seedDefaults(){
-      const wanted=['Anchor Light (LED)','Running/Nav Lights (LED set)','Chartplotter/MFD','Depth/Wind (avg)','Cabin Fan','Stereo (avg listening)','Laptop (USB-PD 65 W)','Fridge (60 W @ 35% duty)'];
+      const wanted=['Anchor Light (LED)',
+      'Running/Nav Lights (LED set)',
+      'Chartplotter/MFD',
+      'Depth/Wind (avg)',
+      'Cabin Fan',
+      'Stereo (avg listening)',
+      'Laptop (USB-PD 65 W)'
+      //'Fridge (60 W @ 35% duty)'
+      ];
       const existing=new Set(state.rows.map(r=>r.name));
       for(const n of wanted){ if(!existing.has(n)){ const it=LIB.find(x=>x.name===n); if(it) addRow({...it}); } }
     }
