--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     .card h2{margin:0;padding:14px 16px;border-bottom:1px solid var(--line);font-size:15px}
     .card .content{padding:14px 16px}
 
-    /* SETTINGS layout: pair side-by-side, note below */
     .row{display:flex;flex-direction:column;gap:6px;margin-bottom:12px}
     .pair{display:flex;gap:10px;align-items:center}
     .pair label{min-width:140px;font-size:12px;color:var(--muted)}
@@ -66,7 +65,6 @@
     .foot{margin-top:14px;font-size:12px;color:var(--muted)}
     .pill{display:inline-block;padding:2px 8px;border-radius:999px;border:1px solid var(--line);background:#0c1626;font-size:11px;margin-right:6px}
 
-    /* Generation form */
     .gen-form{display:grid;grid-template-columns:repeat(2,1fr);gap:10px;margin-bottom:12px}
     .gen-form .full{grid-column:1 / -1}
     .gen-list table td.actions{white-space:nowrap}
@@ -75,7 +73,6 @@
     .danger{color:var(--bad)}
     .link{color:var(--accent);cursor:pointer}
 
-    /* Toggle visibility helper */
     .hidden{display:none!important}
 
     @media (max-width:800px){.gen-form{grid-template-columns:1fr}}
@@ -184,6 +181,8 @@
           <div id="tab-loads" class="tab active" role="tab" aria-controls="pane-loads" aria-selected="true">Loads</div>
           <div id="tab-gen" class="tab" role="tab" aria-controls="pane-gen" aria-selected="false">Generation & Charging</div>
           <div id="tab-reports" class="tab" role="tab" aria-controls="pane-reports" aria-selected="false">Reports</div>
+          <!-- NEW: User Manual tab -->
+          <div id="tab-manual" class="tab" role="tab" aria-controls="pane-manual" aria-selected="false">User Manual</div>
         </div>
 
         <div class="tabpanes">
@@ -316,6 +315,109 @@
               <div id="reportsLineFallback" style="display:none"></div>
             </div>
           </div>
+
+          <!-- NEW: USER MANUAL -->
+          <div id="pane-manual" class="pane" role="tabpanel" aria-labelledby="tab-manual">
+            <div class="card" style="padding:12px">
+              <h3 style="margin:0 0 10px">User Manual</h3>
+              <p class="muted" style="margin-top:0">This tab explains each field, the core math, and how to interpret results.</p>
+
+              <h4>1) System &amp; Sizing Settings</h4>
+              <ul>
+                <li><b>System voltage</b> — Your DC bus nominal voltage (12/24/48 V). Affects Amp-hour conversions (Wh ÷ V = Ah) and alternator/charger energy.</li>
+                <li><b>Battery chemistry</b> — Sets default usable DoD:
+                  LFP ≈ 88%, AGM ≈ 50%, Gel ≈ 55%.</li>
+                <li><b>Usable DoD (%)</b> — Portion of the bank you plan to use before recharge.</li>
+                <li><b>Reserve margin (%)</b> — Extra headroom added to trip energy (weather, unexpected loads).</li>
+                <li><b>Trip length (days)</b> — Multiplies “per-day” loads.</li>
+                <li><b>Capacity derate (%)</b> — Reduces nameplate capacity to model cold/aging.</li>
+                <li><b>Inverter efficiency (%)</b> — Used to inflate AC loads back to DC side.</li>
+                <li><b>Inverter standby (W)</b> — “On but idle” draw; uses max AC hours per mode (Anchor/Underway).</li>
+              </ul>
+
+              <h4>2) Loads Table (Per-Day Inputs)</h4>
+              <ul>
+                <li><b>Name / Category</b> — Any label; category is for grouping.</li>
+                <li><b>Type</b> — <i>DC</i> or <i>AC via inverter</i>.</li>
+                <li><b>Entry</b> — Enter power/current as <i>Watts</i> or <i>Amps</i>.</li>
+                <li><b>W/A</b> — The numeric value (e.g., 60 W or 2 A).</li>
+                <li><b>Hours @ Anchor / Underway</b> — Hours the device runs in each mode.</li>
+                <li><b>Duty %</b> — Percent on-time within those hours (e.g., a fridge might cycle 35%).</li>
+                <li><b>Qty</b> — Number of identical devices.</li>
+              </ul>
+
+              <h4>3) Generation &amp; Charging</h4>
+              <ul>
+                <li><b>Solar</b> — Panel W × Panels × Sun Hours × (1 − Derate%) × Controller Eff%.</li>
+                <li><b>Wind</b> — Rated W × Capacity Factor% × Hours.</li>
+                <li><b>Alternator</b> — DC Amps × System V × Hours.</li>
+                <li><b>AC Charger</b> — DC Amps × V × Hours × Eff%.</li>
+              </ul>
+
+              <h4>4) Calculations</h4>
+              <ul>
+                <li><b>Row energy (DC)</b>
+                  <ul>
+                    <li>If entry = <b>W</b>: <code>Wh = Watts × Hours × Duty × Qty</code></li>
+                    <li>If entry = <b>A</b>: <code>Wh = Amps × System V × Hours × Duty × Qty</code></li>
+                  </ul>
+                </li>
+                <li><b>Row energy (AC via inverter)</b>
+                  <ul>
+                    <li>If entry = <b>W</b>: <code>Wh = Watts × Hours × Duty × Qty ÷ InverterEff</code></li>
+                    <li>If entry = <b>A</b>: <code>Wh = Amps × 120 V × Hours × Duty × Qty ÷ InverterEff</code></li>
+                  </ul>
+                </li>
+                <li><b>Inverter standby Wh/day</b> — <code>StandbyW × (max AC hours @ Anchor + max AC hours Underway)</code></li>
+                <li><b>Total Loads (per day)</b> — Sum of all rows + inverter standby.</li>
+                <li><b>Total Generation (per day)</b> — Sum of all sources (at system V).</li>
+                <li><b>Net (per day)</b> — <code>Generation − Loads</code> (positive = surplus).</li>
+                <li><b>Trip energy</b> — <code>Loads/day × Trip days</code>.</li>
+                <li><b>Battery sizing</b>
+                  <ul>
+                    <li>Trip Ah = <code>Trip Wh ÷ V</code></li>
+                    <li>Usable required Ah = <code>Trip Ah × (1 + Reserve%)</code></li>
+                    <li><b>Nameplate Ah</b> = <code>Usable Ah ÷ DoD</code>, then adjust for <code>Derate</code> if set.</li>
+                    <li>Suggested layout ≈ number of 100 Ah modules @ system V.</li>
+                  </ul>
+                </li>
+              </ul>
+
+              <h4>5) KPIs &amp; Units</h4>
+              <ul>
+                <li>Use the <b>Ah/Wh toggle</b> to switch units (defaults to Ah). KPIs and Reports follow your selection.</li>
+                <li>Net card colors: green = surplus, yellow = small deficit, red = larger deficit.</li>
+              </ul>
+
+              <h4>6) Reports</h4>
+              <ul>
+                <li><b>Bar Chart</b> — Generation (positive), Consumption (shown as negative), and Net per day.</li>
+                <li><b>Line Chart</b> — Cumulative consumption over the trip.</li>
+                <li>Both charts react to the Ah/Wh toggle.</li>
+              </ul>
+
+              <h4>7) Save / Load / Export / Print</h4>
+              <ul>
+                <li><b>Save</b> — Stores your scenario in browser storage.</li>
+                <li><b>Load</b> — Restores the saved scenario.</li>
+                <li><b>Export CSV</b> — Exports load rows and summary KPIs.</li>
+                <li><b>Print Report</b> — Prints a clean report view of the current state.</li>
+              </ul>
+
+              <h4>8) Defaults &amp; Autosave</h4>
+              <ul>
+                <li>On first run (or after Reset), a sensible set of example loads &amp; solar generation is added.</li>
+                <li>Autosave runs in the background so you don’t lose work; <b>Reset</b> clears autosave.</li>
+              </ul>
+
+              <h4>9) Tips</h4>
+              <ul>
+                <li>Convert incandescent/halogen to LED to shrink nightly loads.</li>
+                <li>Mind inverter standby; switch off when not needed.</li>
+                <li>For AC devices, consider using actual measured watts (Kill-A-Watt / spec sheet).</li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <!-- Unit Toggle -->
@@ -393,7 +495,8 @@
     // Refs
     const voltage = $('#voltage'), chemistry = $('#chemistry'), dod = $('#dod'), reserve = $('#reserve'), days = $('#days'), invEff = $('#invEff'), invStandby = $('#invStandby'), derate = $('#derate');
     const tbody = $('#tbody'), libSelect = $('#libSelect');
-    const tabLoads = $('#tab-loads'), tabGen = $('#tab-gen'), tabReports = $('#tab-reports'), paneLoads = $('#pane-loads'), paneGen = $('#pane-gen'), paneReports = $('#pane-reports');
+    const tabLoads = $('#tab-loads'), tabGen = $('#tab-gen'), tabReports = $('#tab-reports'), tabManual = $('#tab-manual');
+    const paneLoads = $('#pane-loads'), paneGen = $('#pane-gen'), paneReports = $('#pane-reports'), paneManual = $('#pane-manual');
     const genType = $('#gen-type'), genName = $('#gen-name'), genFields = $('#gen-fields'), genHours = $('#gen-hours'), genQty = $('#gen-qty'), genAddBtn = $('#gen-add'), genUpdateBtn = $('#gen-update'), genCancelBtn = $('#gen-cancel'), genEditingLabel = $('#gen-editing'), genBody = $('#genBody');
 
     voltage.value = DEFAULTS.voltage; chemistry.value = DEFAULTS.chemistry; dod.value = DEFAULTS.dodByChem[DEFAULTS.chemistry];
@@ -428,23 +531,33 @@
         tabLoads.classList.add('active'); tabLoads.setAttribute('aria-selected','true');
         tabGen.classList.remove('active'); tabGen.setAttribute('aria-selected','false');
         tabReports.classList.remove('active'); tabReports.setAttribute('aria-selected','false');
-        paneLoads.classList.add('active'); paneGen.classList.remove('active'); paneReports.classList.remove('active');
+        tabManual.classList.remove('active'); tabManual.setAttribute('aria-selected','false');
+        paneLoads.classList.add('active'); paneGen.classList.remove('active'); paneReports.classList.remove('active'); paneManual.classList.remove('active');
       } else if(which==='gen'){
         tabGen.classList.add('active'); tabGen.setAttribute('aria-selected','true');
         tabLoads.classList.remove('active'); tabLoads.setAttribute('aria-selected','false');
         tabReports.classList.remove('active'); tabReports.setAttribute('aria-selected','false');
-        paneGen.classList.add('active'); paneLoads.classList.remove('active'); paneReports.classList.remove('active');
+        tabManual.classList.remove('active'); tabManual.setAttribute('aria-selected','false');
+        paneGen.classList.add('active'); paneLoads.classList.remove('active'); paneReports.classList.remove('active'); paneManual.classList.remove('active');
       } else if(which==='reports'){
         tabReports.classList.add('active'); tabReports.setAttribute('aria-selected','true');
         tabLoads.classList.remove('active'); tabLoads.setAttribute('aria-selected','false');
         tabGen.classList.remove('active'); tabGen.setAttribute('aria-selected','false');
-        paneReports.classList.add('active'); paneLoads.classList.remove('active'); paneGen.classList.remove('active');
+        tabManual.classList.remove('active'); tabManual.setAttribute('aria-selected','false');
+        paneReports.classList.add('active'); paneLoads.classList.remove('active'); paneGen.classList.remove('active'); paneManual.classList.remove('active');
         recalc();
+      } else if(which==='manual'){
+        tabManual.classList.add('active'); tabManual.setAttribute('aria-selected','true');
+        tabLoads.classList.remove('active'); tabLoads.setAttribute('aria-selected','false');
+        tabGen.classList.remove('active'); tabGen.setAttribute('aria-selected','false');
+        tabReports.classList.remove('active'); tabReports.setAttribute('aria-selected','false');
+        paneManual.classList.add('active'); paneLoads.classList.remove('active'); paneGen.classList.remove('active'); paneReports.classList.remove('active');
       }
     }
     tabLoads.addEventListener('click', ()=>setTab('loads'));
     tabGen.addEventListener('click', ()=>setTab('gen'));
     tabReports.addEventListener('click', ()=>setTab('reports'));
+    tabManual.addEventListener('click', ()=>setTab('manual'));
 
     function addRow(row){
       const r = Object.assign({ name:'New Load', category:CATS[0], type:'DC', entry:'W', value:1, hAnchor:0, hSail:0, duty:100, qty:1 }, row||{});
@@ -648,7 +761,6 @@
 
       renderGenList();
 
-      // Feed Reports (always in Wh internally; renderer converts by unitMode)
       const d = state.settings.days;
       const labels = Array.from({length:d}, (_,i)=> `Day ${i+1}`);
       const generationWh = Array.from({length:d}, ()=> genWhDay);
@@ -675,15 +787,16 @@
       const blob=new Blob([csv],{type:'text/csv'}); const url=URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download='boat-battery-loads.csv'; a.click(); URL.revokeObjectURL(url);
     }
 
-    // Idempotent default loads
+    // Idempotent default loads (FRIDGE REMOVED)
     function seedDefaults(){
-      const wanted=['Anchor Light (LED)',
-      'Running/Nav Lights (LED set)',
-      'Chartplotter/MFD',
-      'Depth/Wind (avg)',
-      'Cabin Fan',
-      'Stereo (avg listening)',
-      'Laptop (USB-PD 65 W)'
+      const wanted=[
+        'Anchor Light (LED)',
+        'Running/Nav Lights (LED set)',
+        'Chartplotter/MFD',
+        'Depth/Wind (avg)',
+        'Cabin Fan',
+        'Stereo (avg listening)',
+        'Laptop (USB-PD 65 W)'
       ];
       const existing=new Set(state.rows.map(r=>r.name));
       for(const n of wanted){ if(!existing.has(n)){ const it=LIB.find(x=>x.name===n); if(it) addRow({...it}); } }
@@ -724,13 +837,11 @@
       while(genWh.length<len) genWh.push(0);
       while(useWh.length<len) useWh.push(0);
 
-      // Convert based on unitMode
       const isAh = (unitMode === 'Ah');
       const gen = isAh ? genWh.map(x=>x/v) : genWh.slice();
       const use = isAh ? useWh.map(x=>x/v) : useWh.slice();
       const net = gen.map((g,i)=> g - use[i]);
 
-      // Cumulative consumption (unit-aware)
       const cumulativeUse=[]; use.reduce((acc,v,i)=> (cumulativeUse[i]=acc+v, acc+v),0);
 
       const hasChart = typeof window.Chart !== 'undefined';
@@ -834,7 +945,6 @@
         </table>`;
     }
 
-    // Public adapter
     window.renderReports = function({ labels, generationWh, consumptionWh, systemVoltage }) {
       updateReportsFromModel({ labels, generationWh, consumptionWh, systemVoltage });
     };
