--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       }
       .tab.active {
         color: var(--text);
-        background: #132038;
+        background: #ffae42; // #132038 original
       }
       .tabpanes > .pane {
         display: none;
