minor tab label tweak

--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
         border: 1px solid var(--line);
         border-radius: 10px;
         background: #0c1626;
-        font-size: 12px;
+        /*font-size: 12px; */
+        font-size: clamp(13px, 0.8rem + 0.2vw, 14px);
         color: var(--muted);
         cursor: pointer;
         user-select: none;
