--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
       defer
       src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"
     ></script>
+    <!-- NEW: reports module -->
+    <script defer src="reports.js"></script>
+    <!-- main logic-->
     <script defer src="script.js"></script>
+  
   </head>
   <body>
     <header>
