--- a/index.html
+++ b/index.html
@@ -430,9 +430,13 @@
 <!-- Trip energy vs usable bank (gauge-ish) -->
 <div class="card" style="margin-top:16px; padding:12px">
   <h3 style="margin:0 0 8px">Trip Energy vs Usable Bank</h3>
-  <div style="height:200px">
-    <canvas id="chartGauge" height="180"></canvas>
+
+  <div id="gaugeWrap"
+       style="position:relative; width:100%; min-width:320px; height:300px;">
+    <canvas id="chartGauge"
+            style="position:absolute; inset:0; width:100%; height:100%; display:block"></canvas>
   </div>
+
   <div id="chartGaugeFallback" style="display:none"></div>
 </div>
 
