--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
 <!-- Trip energy vs usable bank (gauge-ish) -->
 <div class="card" style="margin-top:16px; padding:12px">
-  <h3 style="margin:0 0 8px">Trip Energy vs Usable Bank</h3>
+  <h3 style="margin:0 0 8px">Trip Net vs Usable Bank</h3>
 
   <div id="gaugeWrap"
        style="position:relative; width:100%; min-width:320px; height:300px;">
